<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/white_box_add_dialog"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialog_teacher_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_background_box"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/add_exam"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight=".4"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_dialog"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/customTextColor"
            android:textSize="18sp"

            android:inputType="text" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight=".4"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/office_dialog" />

        <EditText
            android:id="@+id/post_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/office"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/customTextColor"
            android:textSize="18sp"
            android:inputType="number" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:padding="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight=".4"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/phonenumber_dialog" />

        <EditText
            android:id="@+id/phonenumber_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/customTextColor"
            android:textSize="18sp"

            android:inputType="number"
            tools:ignore="TextFields" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:padding="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight=".4"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/email_dialog" />

        <EditText
            android:id="@+id/email_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/customTextColor"
            android:textSize="18sp"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>