<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/teacher_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background_selector"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/nameteacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/personimage"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toStartOf="@+id/popupbtn"
                card_view:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/popupbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="?selectableItemBackgroundBorderless"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/nameteacher"
                card_view:srcCompat="@drawable/round_settings_24" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:background="@android:color/black"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/nameteacher" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/personimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_room_24"
                card_view:layout_constraintStart_toStartOf="@+id/line"
                card_view:layout_constraintTop_toTopOf="@+id/officeteacher" />

            <TextView
                android:id="@+id/officeteacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:text="@string/office"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/personimage"
                card_view:layout_constraintTop_toBottomOf="@+id/line" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/round_local_phone_24"
                card_view:layout_constraintStart_toStartOf="@+id/personimage"
                card_view:layout_constraintTop_toTopOf="@+id/numberteacher" />

            <TextView
                android:id="@+id/numberteacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="@+id/officeteacher"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView5"
                card_view:layout_constraintTop_toBottomOf="@+id/officeteacher" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_email_24"
                card_view:layout_constraintStart_toStartOf="@+id/imageView5"
                card_view:layout_constraintTop_toTopOf="@+id/emailteacher" />

            <TextView
                android:id="@+id/emailteacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="@+id/numberteacher"
                card_view:layout_constraintStart_toEndOf="@+id/imageView4"
                card_view:layout_constraintTop_toBottomOf="@+id/numberteacher" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>